[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
noise = "0.8.2"
proconio = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
svg = "0.13.0"
palette = { version = "0.6.1", features = ["named_gradients"] }
once_cell = "1.17.0"
raqote = { version = "0.8.2", default-features = false, features = ["png"] }
rand_distr = "0.4.3"
ascii = "1.1.0"
bitset-fixed = "0.1.0"
either = "1.9.0"
fixedbitset = "0.4.2"
im-rc = "15.1.0"
indexmap = "2.0.0"
itertools-num = "0.1.3"
lazy_static = "1.4.0"
libm = "0.2.7"
maplit = "1.0.2"
nalgebra = "0.32.3"
ndarray = "0.15.6"
num = "0.4.1"
num-derive = "0.4.0"
ordered-float = "3.7.0"
permutohedron = "0.2.4"
petgraph = "0.6.3"
regex = "1.9.1"
rustc-hash = "1.1.0"
smallvec = "1.11.0"
superslice = "1.0.0"
text_io = "0.1.12"
whiteread = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.81"
getrandom = { version = "0.2.7", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = ['ImageData', 'CanvasRenderingContext2d']

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false

[lib]
crate_type = ["cdylib", "rlib"]
