[package]
name = "tools"
version = "1.0.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.7.3", features = ["small_rng"] }
rand_chacha = "=0.2.2"
rand_distr = "=0.2.2"
proconio = { version = "=0.3.6", features = ["derive"] }
clap = { version = "4.0.22", features = ["derive"] }
svg = "0.9.1"
ascii = "1.1.0"
bitset-fixed = "0.1.0"
either = "1.8.1"
fixedbitset = "0.4.2"
im-rc = "15.1.0"
indexmap = "2.0.0"
itertools = "0.11.0"
itertools-num = "0.1.3"
lazy_static = "1.4.0"
libm = "0.2.7"
maplit = "1.0.2"
nalgebra = "0.32.3"
ndarray = "0.15.6"
num = "0.4.1"
num-derive = "0.4.0"
ordered-float = "3.7.0"
permutohedron = "0.2.4"
petgraph = "0.6.3"
regex = "1.9.1"
rustc-hash = "1.1.0"
smallvec = "1.11.0"
superslice = "1.0.0"
text_io = "0.1.12"
whiteread = "0.5.0"


[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false

[profile.release]
strip = "symbols"
