[package]
name = "apc001"
version = "0.1.0"
edition = "2021"

[dependencies]
ascii = "1.1.0"
bitset-fixed = "0.1.0"
either = "1.9.0"
fixedbitset = "0.4.2"
im-rc = "15.1.0"
indexmap = "2.0.0"
itertools = "0.11.0"
itertools-num = "0.1.3"
lazy_static = "1.4.0"
libm = "0.2.7"
maplit = "1.0.2"
nalgebra = "0.32.3"
ndarray = "0.15.6"
num = "0.4.1"
num-derive = "0.4.0"
ordered-float = "3.7.0"
permutohedron = "0.2.4"
petgraph = "0.6.3"
proconio = "0.4.5"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.9.1"
rustc-hash = "1.1.0"
smallvec = "1.11.0"
superslice = "1.0.0"
text_io = "0.1.12"
whiteread = "0.5.0"
